--- a/index.html
+++ b/index.html
@@ -15,8 +15,25 @@
     </style>
 </head>
 <body>
-    <!-- Form sebelumnya disini -->
-    
+ <h1>AGC Generator</h1>
+    <form id="agcForm">
+        <input 
+            type="url" 
+            name="url" 
+            id="urlInput"
+            placeholder="Enter target URL (e.g., https://example.com)" 
+            required
+        >
+        <button type="submit">Generate AGC</button>
+    </form>
+
+    <div class="sitemap-section">
+        <h3>Sitemap Generator</h3>
+        <button onclick="generateSitemap()">Generate Sitemap</button>
+        <div id="loading" class="hidden">Loading sitemap...</div>
+        <div id="sitemapResult"></div>
+        <a id="downloadLink" class="hidden" download="sitemap.xml">Download Sitemap</a>
+    </div>    
     <div id="contentContainer"></div>
 
     <script>
